# ingest

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md
docker-setup/: README.md  create_bucket.py  create_tables.py  create_tables.sh
docker-setup/sql/: console.sql  data.sql  files.sql  metrics.sql
docker-setup/volumes/clickhouse/docker-entrypoint-initdb.d/: 00_create_artifact.sh  01_create_numer.sh  02_create_string.sh
docker-setup/volumes/clickhouse/etc/clickhouse-server/config.d/: config.xml
src/: auth.rs  config.rs  db.rs  error.rs  main.rs  traits.rs  utils.rs
src/models/: data.rs  files.rs  log.rs  metrics.rs  mod.rs  status.rs
src/processors/: background.rs  mod.rs  stream.rs
src/routes/: files.rs  health.rs  ingest.rs  mod.rs  step.rs
