[package]
name = "server-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.1"
clickhouse = { version = "0.12.2", features = ["rustls-tls"] }
hyper-tls = "0.5"
futures = "0.3"
serde_json = "1"
serde = { version = "1.0", features = ["derive"] }
# axum-server = { version = "0.7.1" }
tokio = { version = "1.39.0", features = ["full"] }
serde-inline-default = "0.2.3"
lazy_static = "1.5.0"
clap = { version = "3.0", features = ["derive"] }
aws-config = "0.56.1"
aws-sdk-s3 = "0.33.0"
aws-types = "0.56.1"
chrono = "0.4.39"
sqlx = { version = "0.7.3", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "chrono",
    "uuid",
] }
sha2 = "0.10.8"
dotenv = "0.15.0"
simd-json = "0.15.1"
bytes = "1.10.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
